fixed text overflow for smaller screens

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -52,7 +52,7 @@
 
 .project p {
     position: relative;
-    font-size: 20px;
+    font-size: 18px;
     font-family: Arial;
     width: 80%;
     // margin-left: 70px;
